feat(agent): 重构 Agent端配置和授权逻辑
- 更新 AgentAuthorize 配置属性前缀
- 重构 AgentConfig 配置类，增加 ServerConfig 配置
- 修改 AgentStartInit 类，支持自定义上下文路径- 新增 ApiProperties 类，用于配置 API 相关属性
- 更新 OAuth 相关配置和功能
- 重构 AuthorizeInterceptor授权拦截器
- 更新 BaseServerController 中的用户获取逻辑
- 优化数据库和服务发现相关配置